change button sizes at a certain media query and fix a spacing issue on tablet

--- a/src/calendarBookingForm/Components/VariantList.scss
+++ b/src/calendarBookingForm/Components/VariantList.scss
@@ -5,7 +5,7 @@
 .VariantListTotal-Grid{
     margin-top: 2rem;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    grid-template-columns: 1fr 1fr;
     grid-template-areas: 
     "box1 . box2";
 }
@@ -38,3 +38,12 @@
       padding: 0rem;
     }
   }
+
+@media only screen and (min-width: 767px){
+    .VariantListTotal-ConfirmBtn {
+        height: 2.5rem;
+    }
+    .Variant-AddBtn {
+        height: 2.5rem;
+    }
+}
